# bob-agi

./: .gitignore  README.md  convert_safetensor_to_pt.py  coords_on_image.py  main.py  plans.txt  pyproject.toml  test_join_discord.py  utils.py
app/actions/: eyesight.py  hands.py  hearing.py  thinking.py  voice.py
app/agents/: audio.py  base.py  speech.py  text.py  vision.py
app/bob/: bob.py  model.md  overview.md  test_bob.py
app/embeddings/: embeddings.py
app/env/: browser.py  computer.py  discord.py  keyboard.py  microphone.py  mouse.py  screen.py
app/memory/: autobiographical.py  base.py  causual.py  conceptual.py  episodic.py  internalmonologue.py  knowledge_system.py  metacognitive.py  procedural.py  semantic.py  spatial.py  temporal.py
app/train/: fine_tune.py
docs/: filestructure.md  first-steps  firststeps.md  integration_testing_docs.md
pipelines/: README.md  discord_finetune_pipeline.py  eyesight_screen_pipeline.py  hands_browser_clicking_accuracy_pipeline.py  join_agora_voice_channel.py  simple_bbox_pipeline.py  simple_visual_task_pipeline.py  test_omniparser_detection.py  test_sam_detection.py  test_screen_general_mask_pipeline.py  test_screen_query_mask_pipeline.py  test_screen_sam_detection.py  test_yolo_detection.py  text_grounding_sam_focused_pipeline.py  visual_accuracy_pipeline.py  visual_accuracy_task_pipeline.py  visual_perception_pipeline.py
tests/: __init__.py  conftest.py  pytest.ini  run_tests.py  test_base.py  test_browser.py  test_screen.py  test_vision_browser.py
tests/conf/: test_config.yaml
tests/unit/: __init__.py
(+30 files in other folders)
