[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0"
pytest-asyncio = "^0.14.0"
pillow = "^8.0"
numpy = "^1.19"
opencv-python = "^4.5" 